--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,16 +1,16 @@
 {% extends 'layout.html' %}
 {% block headline %}
-  {{ school.SCHOOLNAME.title() }}
+  {{ county }}
 {% endblock %}
 {% block subhead %}
-  {{ school.ADDRESS.title() }}, {{ school.city.title() }}
+  <strong>There are {{total}} data analysts in {{county}} county </strong>
 {% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
     <div class="column">
-    <p><strong>School type:</strong> {{ school.SCH_TYPE }}</p>
-    <p></p>
+    <p><strong>County Name:</strong> {{ county }}</p>
+    <p><strong>Number of Disasters:</strong> {{ disasters }}</p>
     <p></p>
     </div>
     <div class="column">
@@ -18,42 +18,5 @@
     </div>
   </div>
 </div>
-<script>
-  L.mapbox.accessToken = 'pk.eyJ1IjoianNtYXJ0NzYiLCJhIjoiY2ttMTczbDhyMDN1ZDJ4anZuZzc5bTY1OCJ9.1vhSKp4Dv-ya0V5yToNhpw';
-  var map = L.mapbox.map('map')
-  .setView([-74, 40.71], 9)
-  .addLayer(L.mapbox.styleLayer('mapbox://styles/mapbox/streets-v11'));
 
-  <!-- console.log({{school.longitude}});
-  console.log({{school.latitude}}); -->
-  map.on('load', function() {
-    var geojsonData = {
-      "type": "FeatureCollection",
-      "features": [{
-        "type": "Feature",
-        "geometry": {
-          "type": "Point",
-          "coordinates": [{{school.longitude}}, {{school.latitude}}]
-        }
-      }]
-    };
-  console.log(geojsonData);
-  console.log({{school.longitude}});
-  console.log({{school.latitude}});
-    map.addLayer({
-      "id": "points",
-      "type": "circle",
-      "source": {
-        "type": "geojson",
-        "data": geojsonData
-      },
-      "paint": {
-        "circle-radius": 5,
-        "circle-color": "#ECCB2F",
-        "circle-stroke-width": 1,
-        "circle-stroke-color": "black"
-      }
-    })
-  })
-</script>
 {% endblock %}
