--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,13 +23,13 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.Default.css' rel='stylesheet' />
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Schools</a>
+      <a class="navbar-brand" href="/">Jobs</a>
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="/">Home</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/city">Cities</a>
+          <a class="nav-link" href="/county">Counties</a>
         </li>
       </ul>
     </nav>
