--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,22 @@ body,
 html {
   height: 100%;
 }
+#map2 {
+    position: relative;
+    border: 1px solid black;
+    border-radius: 8px;
+    height: 600px;  /* or as desired */
+    width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
+  }
+
+#state_map {
+    position: relative;
+    border: 1px solid black;
+    border-radius: 8px;
+    height: 600px;  /* or as desired */
+    width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
+  }
+
 
 .leaflet-popup-content {
   text-align: center;
