--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,41 @@
 {% extends 'layout.html' %}
+
 {% block headline %}
   There are {{total}} Employed Data Analysts in the USA 
 {% endblock %}
+
 {% block subhead %}
   It's pretty cool.
 {% endblock %}
 {% block content %}
-<div class="container">
-  <div class="col">
-  <div class="row">
-  <div id='map2' style='width: 800px; height: 500px;'></div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="col-3">
+      <h1>Pick a State, any State!</h1>
+      <div class="dropdown">
+         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+          States<span class="caret"></span>
+        </button>
+      <div class="dropdown-menu">
+        {% for state in states %}
+        <a class="dropdown-item" href="/states/{{ state.FIPS }}">{{ state.State }}</a>
+        {% endfor %}
+      </div>
+</div>
+  
   </div>
+  <div class="col-6 mx-auto">
+  <div id='map2'></div>
+  </div>
+  <div class="col-3"><p>     </p></div>
   </div> 
-  <div class="col">
-    <p>I'm amazed and frankly you should be, too.</p>
-      {% for county in counties %}
-    <p><a href="/county/{{ county.lower().replace(' ', '-') }}">{{ county }}</a></p>
-  {% endfor %}
-  </div>
    
 </div>
+<div class="row-fluid">
+</p> This is a footer <hr><br><br><br><br><br><br><br></p>
 
+</div>
+{% block script %}
+<script type="text/javascript" src="../static/js/logic.js"></script>
+{% endblock %}
 {% endblock %}
