--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,18 +4,20 @@
     <title>{{ self.headline() }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
     <!-- <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script> -->
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+   
     <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
- 
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin=""/>
-
+     <script type="text/javascript" src="../static/js/npmaps.js"></script>
+    <script type="text/javascript" src="../static/js/salaries.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+     <script src="../static/js/Leaflet.MakiMarkers.js"></script>
+     
+    
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    
   </head>
   <body>
   
@@ -23,13 +25,13 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.Default.css' rel='stylesheet' />
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Jobs</a>
+      <a class="navbar-brand" href="/">Data Analysts</a>
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="/">Home</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/county">Counties</a>
+          <a class="nav-link" href="/states">State Information</a>
         </li>
       </ul>
     </nav>
@@ -44,10 +46,9 @@
     
     <!-- d3 JavaScript -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
-
+    
     <!-- Our JS -->
-    <script type="text/javascript" src="../static/js/salaries.js"></script>
-    <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/logic.js"></script>
+   {% block script %}{% endblock %}
+    
   </body>
 </html>
