--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>{{ self.headline() }}</title>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    
     <!-- <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script> -->
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="">
@@ -14,6 +16,7 @@
     <script type="text/javascript" src="../static/js/salaries.js"></script>
     <script type="text/javascript" src="../static/js/config.js"></script>
      <script src="../static/js/Leaflet.MakiMarkers.js"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js">
      
     
     <!-- Our CSS -->
