--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ html {
     position: relative;
     border: 1px solid black;
     border-radius: 8px;
-    height: 600px;  /* or as desired */
+    height: 400px;  /* or as desired */
     width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
   }
 
@@ -23,7 +23,18 @@ html {
     height: 600px;  /* or as desired */
     width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
   }
-
+  
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
 
 .leaflet-popup-content {
   text-align: center;
