--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
     <script type="text/javascript" src="../static/js/npmaps.js"></script>
     <script type="text/javascript" src="../static/js/salaries.js"></script>
+    <script type="text/javascript" src="../static/js/state-outlines.js"></script>
     <script type="text/javascript" src="../static/js/config.js"></script>
     <script src="../static/js/Leaflet.MakiMarkers.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
