--- a/templates/states.html
+++ b/templates/states.html
@@ -76,6 +76,16 @@ function style(feature) {
       fillOpacity: 0.7
   };
 }
+function states(feature) {
+  return {
+      fillColor: getColor(feature.properties.AVE_POSTED_SAL),
+      weight: 2,
+      opacity: 1,
+      color: 'white',
+      dashArray: '3',
+      fillOpacity: 0.7
+  };
+}
 
 employed = L.geoJson(salary_data, {style: style});
 
@@ -136,7 +146,24 @@ employed = L.geoJson(salary_data, {
   style: style,
   onEachFeature: salary_feature 
 });
+var state_data = L.geoJson(states_data, {  
+  style: states,
+  onEachFeature: state_feature
 
+});
+function resetState(e) {
+  state_data.resetStyle(e.target);
+}
+function state_feature(feature, layer) {
+  layer.on({
+      mouseover: highlightFeature,
+      mouseout: resetState,
+      click: zoomToFeature
+  });
+  layer.bindPopup("<h1>State: <a href='/states/"+feature.properties.STATE+"'>" + feature.properties.NAME + "</a></h1><hr><h1>Average Est Salary: " +
+        "$" + feature.properties.AVE_POSTED_SAL + "</h1><hr>Cost of Living Index: "
+         + feature.properties.COST_OF_LIVING + "<hr> <h1>Total Data Analyst Job Postings: " + feature.properties.JOB_POSTINGS + "</h1>");
+}
 
 
 var mapboxAccessToken = API_KEY;
@@ -149,7 +176,7 @@ var grayscale = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}
 var myMap = L.map('state_map', {
   center: [lat, lon],
   zoom: zoom,
-  layers: [grayscale, employed]
+  layers: [grayscale, state_data]
 });
 
 var baseMaps = {
@@ -158,8 +185,9 @@ var baseMaps = {
 };
 
 var overlayMaps = {
-  "Employed": employed,
-  "Parks": NPMap
+  "Salary Info": employed,
+  "Parks": NPMap,
+  "State": state_data
 };
 
 L.control.layers(baseMaps, overlayMaps).addTo(myMap);
@@ -177,7 +205,7 @@ legend1.onAdd = function (myMap) {
         div.innerHTML +=
             '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
             labels[i] + '<br>' + '<br>';
-            // grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+           
     }
 
     return div;
@@ -186,16 +214,17 @@ legend1.onAdd = function (myMap) {
 legend1.addTo(myMap);
 
 myMap.on('overlayadd', function(eventLayer) {
-  if (eventLayer.name === 'Employed') {
+  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
     legend1.addTo(this);
   }
+
   else {
     this.removeControl(legend1)
   }
 });
 
 myMap.on('overlayremove', function(eventLayer) {
-  if (eventLayer.name === 'Employed') {
+  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
     this.removeControl(legend1);
   }
 });
