--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,6 +2,17 @@
 {% block headline %}
   {{ state.State }}
 {% endblock %}
+{% block navlink %}
+  <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+          State<span class="caret"></span>
+        </a>
+      <div class="dropdown-menu">
+        {% for state in states %}
+        <a class="dropdown-item" href="/states/{{ state.FIPS }}">{{ state.State }}</a>
+        {% endfor %}
+  </li>
+{% endblock %}
 {% block subhead %}
   <strong>There are data analysts in {{state.State}}! </strong>
 {% endblock %}
@@ -174,19 +185,25 @@ legend1.onAdd = function (myMap) {
 
 legend1.addTo(myMap);
 
+
 myMap.on('overlayadd', function(eventLayer) {
-  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
+  if (eventLayer.name === 'Salary Info' || eventLayer.name === 'State') {
     legend1.addTo(this);
   }
-
+  else if (eventLayer.name === 'Parks') {
+    this.removeControl(legend1);
+  }
   else {
-    this.removeControl(legend1)
+    this.removeControl(legend1);
   }
 });
 
 myMap.on('overlayremove', function(eventLayer) {
-  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
+  if (eventLayer.name === 'Salary Info' || eventLayer.name === 'State') {
     this.removeControl(legend1);
+  }
+  else if (eventLayer.name === 'Parks') {
+    
   }
 });
 
