--- a/templates/states.html
+++ b/templates/states.html
@@ -1,15 +1,37 @@
 {% extends 'layout.html' %}
+{% block navlink %}
+  <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+          State<span class="caret"></span>
+        </a>
+      <div class="dropdown-menu">
+        {% for state in states %}
+        <a class="dropdown-item" href="/states/{{ state.FIPS }}">{{ state.State }}</a>
+        {% endfor %}
+  </li>
+{% endblock %}
 {% block headline %}
   State Information
 {% endblock %}
 {% block content %}
-<div class="container-fluid">
-<div class="row=fluid">
-<div class="col-8 mx-auto">
+<div class="container">
+<div class="row">
+<div class="col-10 mx-auto">
   <div id='state_map'></div>
   </div>
 </div>
-<div class="row-fluid">
+<div class = "row">
+<br>
+<div class="col-10 mx-auto">
+<br>
+<h2>Cost of Living Index by State </h2>
+<br>
+<div id="cost_of_living"></div>
+</div>
+</div>
+<br>
+<br>
+<div class="row state_table">
   <table class="table table-striped">
     <thead>
       <tr>
@@ -34,6 +56,9 @@
     </tbody>
   </div>
   </div>
+{% endblock %}
+ {% block script %}
+ <script type="text/javascript" src="../static/js/cost-chart.js"></script>
     <script> 
     var lat = 37.8, lon = -96, zoom=4;
             function show() { 
@@ -213,21 +238,26 @@ legend1.onAdd = function (myMap) {
 
 legend1.addTo(myMap);
 
+
 myMap.on('overlayadd', function(eventLayer) {
-  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
+  if (eventLayer.name === 'Salary Info' || eventLayer.name === 'State') {
     legend1.addTo(this);
   }
-
+  else if (eventLayer.name === 'Parks') {
+    this.removeControl(legend1);
+  }
   else {
-    this.removeControl(legend1)
+    this.removeControl(legend1);
   }
 });
 
 myMap.on('overlayremove', function(eventLayer) {
-  if (eventLayer.name === 'Employed' || eventLayer.name === 'State') {
+  if (eventLayer.name === 'Salary Info' || eventLayer.name === 'State') {
     this.removeControl(legend1);
+  }
+  else if (eventLayer.name === 'Parks') {
+    
   }
 });
         </script> 
-
 {% endblock %}
