added filler text

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,13 +20,50 @@
 {% block content %}
 <div class="container">
     <div class="row">
+    <h1>Best States to locate HeadQuarter as starter Data analytic Consultant Firms</h1>
         <div class="col-6">
-            <p>This is some text</p>
+            
+<h2>Project 2 - Objective</h2>
+<p>
+The aim of this project was to provide data with visualize analysis that help starter data analysis consultant firms set a decision of where to set their head quarter that benefit the firm aim of financial and production gains and on the same stream benefit their future data analysts’ employees. So, our analysis was based on analyzing different variables such as data analysts’ salaries, cost of living, data analyst workforce availability, climate condition, and recreation availability within each state in the USA. So, we have employed these variables in our analysis, because they tend to be the main deciding factors, because they are measuring the economic factors of each state, and also the opportunity cost of each state, which will help the starting firm decision making personal(s) to set their headquarter location pick.  
+we have gathered data from multiple sources such as U.S. Census, and other reliable data gathering sources.
+</p>
+        </div>
+        <div class="col-6">
+            <h1>Technologies</h1>
+            <ol>
+            <li>Python</li>
+            <li>JavaScript</li>
+            <li>Flask</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Templates</li>
+            <li>D3</li>
+            <li>SQLite</li>
+          </ol>
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
-            <p>This is some text</p>
+        <div class="col">
+            <p> Cost of Living – the data was based on the indicators of grocery cost index, housing cost index, utilities cost index, transportation cost index, healthcare cost index, and general miscellaneous cost index. The aim of this data is to provide overall analysis and analytical visualization of cost of living of each state. That will help firm decision makers to understand the long term and short-term cost of state choice decision making and help the HR department in calculating the premium of the choice state. Adding to the above the cost-of-living data is based on city and state information which lead to further city-based analysis. </p>
+<p>Salaries data within the state- the data provided analysis and visualization analysis will help the decision maker to understand the level of labor spending based on their state choice, and how that will affect the overall financial budgeting.</p>
+ <p>Workforce availability – the data help in analyzing the existence level of data analyst labor force. The workforce availability data visualization analysis will help the firm decision maker indicate the existence of labor force that willing to execute the firm tasks. </p>
+<p>climate affect – the climate data analysis and visualization of each state will assist decision maker to understand long term climate effect on the business and labor force• Education - based preschool, K-12 and different levels of higher education.</p>
+
+<p>Recreation availability – the data will add to the overall decision making of making the right choice in the process of basing headquarter. And also will help the firm in the long run to attract labor force from outside the chosen state, which in the long run will add to the human factor gains that will benefit the firm. </p>
+<h2>
+<h2>Which is the best state to locate as firm?</h2>
+<p>According to our data that we have used and the employed visualization the best state to start a data analysis firm is Taxes, due to its low cost of living variables. Also, Taxes meeting the average salary boundaries for data analysts professional. On different stream Taxes score above average in terms of recreation and climate. </p>
+<h2>Which is the worst state to locate as firm?</h2>
+<p>Based off the Cost of Living, Hawaii and New York was ranked the worst to locate as starter data analyst firm, due to their high cost living that lead to high salaries requirements.</p>
+<h2>Project Contributors:</h2>
+<ul>
+<li>Jon Smart </li>
+<li>Jullie Kitzler</li>
+<li>George Aziz </li>
+<li>Luke Fedeli </li>
+<li>Marisabel</li>
+</ul>
         </div>
     </div>
 </div>
