--- a/templates/detail.html
+++ b/templates/detail.html
@@ -14,7 +14,7 @@
   </li>
 {% endblock %}
 {% block subhead %}
-  <strong>There are data analysts in {{state.State}}! </strong>
+  Deciding where to locate your company is a huge decision that will greatly impact the success of your business.  With todays workforce changing landscapes, success for companies depend on employee satisfaction.  Top concerns for employees entering the work field are cost of living, salaries, and lifestyles.  “Millennials, the single largest portion of the US workforce at 76 million people, are looking for jobs thatfit their needs and life goals.”   Analyzing these factors can help a company decide where to locate to ensure employee satisfaction.   This webpage was designed for companies, and employees alike, to compare the cost of living and salary in various locations around the country. 
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
