--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,9 @@
 {% endblock %}
 
 {% block subhead %}
-  It's pretty cool.
+  What will work look like in the foreseeable future, and what should organizations do to accommodate those changes? Our start-up company is looking to make the switch, based on research data and economics.
+Additionally, companies are going to be face with the challenges to ways of attracting and retaining talent remotely, including how to manage a wave of new remote labor. The new evolution of flexible work and finding ways to collaborate and pass their company culture will help in the new evolution of working remotely and companies looking to reevaluate their real state portfolios.
+Harvard Business School found that at least 16% of American employees will remain remote after Covid-19. Additionally, the implications of this shift are evolutionary that will have a major effect on the workforce all the way to policymakers, companies and employees.
 {% endblock %}
 {% block content %}
 <div class="container">
